--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0-SNAPSHOT
 	maven_group = com.sango
-	archives_base_name = AutoFish
+	archives_base_name = auto_fish
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
